src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply bg-background text-foreground;
}

button {
    @apply flex flex-row whitespace-nowrap items-center justify-center w-full p-2 text-sm border-2 rounded-lg sm:w-auto sm:justify-between text-sky-500 border-sky-700 dark:text-blue-400 bg-slate-800 hover:bg-slate-600;
}

p,
ul li {
    @apply leading-[30px];
}

ul {
    @apply list-disc list-outside ml-3 gap-2;
}

code {
    padding: 0.25rem 0.375rem;
    border-radius: 0.5rem;
    box-shadow: inset 0 0 0 1px #ffffff1a;
    font-size: 0.75rem;
    background: #3f3f4626;
    color: #fff;
}

pre code {
    padding: 0;
    border-radius: 0;
    box-shadow: none;
    font-size: 0.875rem;
    background: none;
    color: #ff79c6;
    line-height: 1.5;
}

a {
    @apply text-sky-500 font-bold relative pb-[1px];
    box-shadow: inset 0px -3px 0px #075985;
}

a:hover {
    box-shadow: inset 0px -5px 0px #075985;
}

h1 {
    @apply text-4xl;
}

h2 {
    @apply text-3xl;
}

h3 {
    @apply text-2xl;
}

h4 {
    @apply text-xl;
}

h5 {
    @apply text-lg;
}

h6 {
    @apply text-base;
}

pre {
    @apply bg-[#ffffff06] border border-white/10 rounded-2xl p-4 overflow-x-auto text-xs text-[#FF79C6];
}

table tr,
table th {
    @apply border-b border-b-[#52525b];
}

table tr:last-child {
    @apply border-b-0;
}

table th {
    @apply bg-[#1e293b] p-2 text-left;
}

table tr td {
    @apply py-3;
}

.chevron {
    border-bottom: 0.75ch solid transparent;
    border-left: 0.75ch solid #fff;
    border-top: 0.75ch solid transparent;
    content: "";
    display: inline-block;
    transform: scale(0.8);
}

.language-json {
    color: #f1fa8c;
}

[type="warning"] {
    @apply bg-[#461414] border rounded-2xl px-5 py-3 border-white;
}

[type="info"] {
    @apply my-6 items-start flex gap-2.5 rounded-2xl border p-4 leading-6 bg-[#3b82f60d];
}

li::marker {
    @apply text-[#ffffff5c];
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #fff;
    @apply py-3;
}

